<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.nicknam.vshareit.MainActivity">

    <TextView
            android:text="@string/tv_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/tv_instruction_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_instruction_one" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_instructions"
            app:layout_constraintStart_toStartOf="@+id/tv_instructions"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/tv_instruction_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_instruction_two" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_instruction_one"
            app:layout_constraintStart_toStartOf="@+id/tv_instructions"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/tv_instruction_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_instruction_three" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_instruction_two"
            app:layout_constraintStart_toStartOf="@+id/tv_instructions"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/tv_or"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/tv_or" app:layout_constraintBottom_toBottomOf="@+id/tv_or"/>

    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_or" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/tv_or"
            app:layout_constraintBottom_toBottomOf="@+id/tv_or"/>
    <TextView
            android:text="@string/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_or"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAllCaps="true"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_instruction_three" android:bufferType="spannable"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/et_url"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_share" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_or"
            android:hint="@string/et_url_hint" android:importantForAutofill="no" tools:targetApi="o"
            android:imeActionLabel="@string/btn_share" android:imeOptions="actionGo"/>
    <Button
            android:text="@string/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_share" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/et_url" app:layout_constraintBottom_toBottomOf="@+id/et_url"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
